MODON MRE BPDEV/force-app/main/default/objects/Cheque_Details__c/Cheque_Details__c.object-meta.xml
<CustomObject>
    <label>Cheque Details</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Cheque Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cheque Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>