MODON MRE BPDEV/force-app/main/default/objects/Cheque_Details__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>