MODON MRE BPDEV/force-app/main/default/objects/Cheque_Details__c/fields/Cheque_Date__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cheque Date</label>
    <type>Date</type>
</CustomField>