MODON MRE BPDEV/force-app/main/default/objects/Cheque_Details__c/fields/Cheque_Issuer__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Issuer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cheque Issuer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>