MODON MRE BPDEV/force-app/main/default/objects/Cheque_Details__c/fields/Cheque_URL__c.field-meta.xml
<CustomField>
    <fullName>Cheque_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cheque URL</label>
    <type>Url</type>
</CustomField>