MODON MRE BPDEV/force-app/main/default/objects/Cheque_Details__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Cheque Details</relationshipLabel>
    <relationshipName>Cheque_Details</relationshipName>
    <type>Lookup</type>
</CustomField>