MODON MRE BPDEV/force-app/main/default/objects/Cheque_Details__c/fields/MileStoneNumber__c.field-meta.xml
<CustomField>
    <fullName>MileStoneNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MilestoneNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>