MODON MRE BPDEV/force-app/main/default/objects/Cheque_Details__c/fields/OCR_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>OCR_Account_Number__c</fullName>
    <description>Account number as read from the scan. Staging only.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Read Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>