MODON MRE BPDEV/force-app/main/default/objects/Cheque_Details__c/fields/OCR_Amount__c.field-meta.xml
<CustomField>
    <fullName>OCR_Amount__c</fullName>
    <description>Numeric amount as read from the scan. Deliberately separate from Amount__c: a misread amount on a payment record is a financial error, not a UX annoyance, so the machine read never overwrites the live figure without a person accepting it.</description>
    <label>Read Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>