MODON MRE BPDEV/force-app/main/default/objects/Cheque_Details__c/fields/OCR_Amount_In_Words__c.field-meta.xml
<CustomField>
    <fullName>OCR_Amount_In_Words__c</fullName>
    <description>Written amount as read from the scan. Reconciled against the numeric read - a disagreement sets Machine Read Mismatch.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Read Amount in Words</label>
    <length>255</length>
    <type>Text</type>
</CustomField>