MODON MRE BPDEV/force-app/main/default/objects/Cheque_Details__c/fields/OCR_Bank__c.field-meta.xml
<CustomField>
    <fullName>OCR_Bank__c</fullName>
    <description>Bank name as read from the scan. Staging only.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Read Bank</label>
    <length>100</length>
    <type>Text</type>
</CustomField>