MODON MRE BPDEV/force-app/main/default/objects/Cheque_Details__c/fields/OCR_Cheque_Date__c.field-meta.xml
<CustomField>
    <fullName>OCR_Cheque_Date__c</fullName>
    <description>Cheque date as read from the scan. Staging only.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Read Cheque Date</label>
    <type>Date</type>
</CustomField>