MODON MRE BPDEV/force-app/main/default/objects/Cheque_Details__c/fields/OCR_Cheque_No__c.field-meta.xml
<CustomField>
    <fullName>OCR_Cheque_No__c</fullName>
    <description>Cheque number as read from the scan. Staging only - never written to Cheque_No__c without a person confirming it.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Read Cheque Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>