MODON MRE BPDEV/force-app/main/default/objects/Cheque_Details__c/fields/OCR_Error__c.field-meta.xml
<CustomField>
    <fullName>OCR_Error__c</fullName>
    <description>Why the last extraction attempt failed, in words an operations user can act on.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Read Error</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>