MODON MRE BPDEV/force-app/main/default/objects/Cheque_Details__c/fields/OCR_Extracted_JSON__c.field-meta.xml
<CustomField>
    <fullName>OCR_Extracted_JSON__c</fullName>
    <description>Raw structured response from the extraction service, kept for dispute resolution. Mirrors the existing CustomerKYCHandler.createFileLog habit of archiving what the vendor actually returned rather than only what was mapped.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Extracted Data (JSON)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>