MODON MRE BPDEV/force-app/main/default/objects/Cheque_Details__c/fields/OCR_IBAN__c.field-meta.xml
<CustomField>
    <fullName>OCR_IBAN__c</fullName>
    <description>IBAN as read from the scan. Staging only.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Read IBAN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>