MODON MRE BPDEV/force-app/main/default/objects/Cheque_Details__c/fields/OCR_Payee__c.field-meta.xml
<CustomField>
    <fullName>OCR_Payee__c</fullName>
    <description>Payee as read from the scan. Staging only.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Read Payee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>