MODON MRE BPDEV/force-app/main/default/objects/Cheque_Details__c/fields/OCR_Read_On__c.field-meta.xml
<CustomField>
    <fullName>OCR_Read_On__c</fullName>
    <description>When the extraction last ran. Lets a stale read be spotted after a cheque image is replaced.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Read On</label>
    <type>DateTime</type>
</CustomField>