MODON MRE BPDEV/force-app/main/default/objects/Cheque_Details__c/fields/OCR_Status__c.field-meta.xml
<CustomField>
    <fullName>OCR_Status__c</fullName>
    <description>Where the machine read has got to. Confirmed means a person checked the values and accepted them onto the live fields - nothing else may set it.</description>
    <label>Machine Read Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Attempted</fullName>
                <default>true</default>
                <label>Not Attempted</label>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Extracted</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>