MODON MRE BPDEV/force-app/main/default/objects/Cheque_Details__c/fields/Payee__c.field-meta.xml
<CustomField>
    <fullName>Payee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>