MODON MRE BPDEV/force-app/main/default/objects/Cheque_Details__c/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signature</label>
    <type>Checkbox</type>
</CustomField>