MODON MRE BPDEV/force-app/main/default/objects/Cheque_Details__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Cheque Details</relationshipLabel>
    <relationshipName>Cheque_Details</relationshipName>
    <type>Lookup</type>
</CustomField>