MODON MRE BPDEV/force-app/main/default/objects/Cheque_Details__c/fields/UnitName__c.field-meta.xml
<CustomField>
    <fullName>UnitName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UnitName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>